# ComfyUI-Selective-Sigma-Detailer

./: LICENSE  LICENSE-THIRD-PARTY  README.md  __init__.py  pyproject.toml  schedule.py  selective_sigma_detailer.py  ssd_core.py
.github/workflows/: publish_action.yml
example_workflows/: ssd_debug.json  ssd_hiresfix.json  ssd_simple.json
